# ozon-upload

./: category_tree.py  process_feed.py  process_feed_v2.py  pyproject.toml  requirements.txt  search_transformers.py  test_extract_quantity_in_pack.py  upload_item.py
abcp/: get_item_details.py
backend/app/: client.py  config.py  main.py  router.py  search.py  service.py  tdidf.py
backend/app/tests/service/: test_text_processing.py
backend/models/: tfidf_vectorizer.joblib
backend/tmp/: category_tree.json
docs/: add-item.md
frontend/: index.html  script.js  style.css
processed_data/: corpus.txt
scripts/: list_items.py
templates/: index.html
tfidf/: data_prep.py  train.py
