[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Ozon upload application"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # Add your runtime dependencies here, e.g.:
    # "requests>=2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
